cmake_minimum_required(VERSION 3.15)
project(mem_lfs C)

set(CMAKE_C_STANDARD 11)
add_compile_options(-Wall)
find_package(Threads)
add_subdirectory(deps/)
add_library(utils OBJECT print_utils.c memory_utils.c mem_thread_adapter.c mem.c mem.h)
target_link_libraries(utils lfs)
add_executable(mem_lfs main.c)
target_link_libraries(mem_lfs lfs utils Threads::Threads)